[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/BossLevel/RedRocket.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fire.png" type="Texture" id=2]
[ext_resource path="res://src/Levels/BossLevel/RedMissile.gd" type="Script" id=3]
[ext_resource path="res://src/Misc/GenericExplosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/jet.mp3" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.6322, 23.8157 )

[node name="RedMissile" type="Node2D"]
script = ExtResource( 3 )

[node name="RedRocket" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Fire" type="Sprite" parent="."]
position = Vector2( 0.290798, 38.7632 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="GenericExplosion" parent="." instance=ExtResource( 4 )]
visible = false

[node name="JetSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="GenericExplosion" to="." method="_on_GenericExplosion_animation_finished"]
